--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babylon": "^7.0.0-beta",
+    "babylon": "7.0.0-beta.16",
     "cli-table": "^0.3.1"
   }
 }
