--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "acorn": "5.1.1",
     "babylon": "7.0.0-beta.16",
     "cli-table": "^0.3.1"
   }
