--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "acorn": "5.1.1",
     "babylon": "7.0.0-beta.16",
-    "cli-table": "^0.3.1"
+    "cli-table": "^0.3.1",
+    "esprima": "4.0.0"
   }
 }
