--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "bootstrap": "git clone git@github.com:babel/babylon.git ../babylon",
     "test": "node index.js"
   },
   "author": "",
