--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "test": "node index.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "acorn": "5.1.1",
-    "babylon": "7.0.0-beta.19",
+    "@babel/parser": "^7.0.0",
+    "acorn": "^6.0.5",
+    "cherow": "^1.6.9",
     "cli-table": "^0.3.1",
-    "esprima": "4.0.0"
+    "esprima": "^4.0.1"
+  },
+  "devDependencies": {
+    "benchmark": "^2.1.4",
+    "microtime": "^2.1.8"
   }
 }
