--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@babel/parser": "^7.0.0",
     "acorn": "^7.0.0",
-    "cherow": "^1.6.9",
     "cli-table": "^0.3.1",
-    "esprima": "^4.0.1"
+    "esprima": "^4.0.1",
+    "meriyah": "^1.6.15"
   },
   "devDependencies": {
     "benchmark": "^2.1.4",
