--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "bootstrap": "git clone git@github.com:babel/babylon.git ../babylon",
+    "cpu-prof": "node --cpu-prof --cpu-prof-dir=./cpuprofile --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable index.js",
     "test": "node --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable index.js",
     "memory": "node --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable mem.js"
   },
