--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "bootstrap": "git clone git@github.com:babel/babylon.git ../babylon",
     "cpu-prof": "node --cpu-prof --cpu-prof-dir=./cpuprofile --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable index.js",
     "test": "node --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable index.js",
+    "print-bytecode": "node --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable --print-bytecode parse.js > parse.bytecode.txt",
+    "print-code": "node --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable --print-opt-code --code-comments --redirect-code-traces --redirect-code-traces-to=./parse.asm parse.js",
     "memory": "node --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable mem.js"
   },
   "author": "",
